# brev-analyse

./: .gitignore  README.md  justfile  pyproject.toml
src/brev_analyse/: alderspensjon_202512.py  barnetrygd_202512.py  dagpenger.py  dagpenger_202506.py  dagpenger_202510.py  dagpenger_202512.py  get_answers.py  get_data.py  prep_datasett.py  uforetrygd_202510.py  uforetrygd_202512.py
src/brev_analyse/utils/: prep_alderspensjon.py  prep_barnetrygd.py  prep_dagpenger.py  prep_uforetrygd.py
