[project]
name = "brev-analyse"
version = "0.1.0"
description = "Analyse av innbyggernes forståelse av brev og sammenhenger med kontaktbehov"
authors = [
    {name = "Tobias McVey", email = "tobias.mcvey@nav.no"},
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["brev", "vedtak"]
license = {file = "LICENSE"}

dependencies = [
    "nbstripout>=0.8.1",
    "openpyxl>=3.1.5",
    "p2j>=1.3.2",
    "pandas>=2.2.3",
    "pyreadstat>=1.2.8",
    "ruff>=0.11.4",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "taskanalytics-data-wrapper>=0.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.4",
]

[project.urls]
"Homepage" = "https://github.com/navikt/brev-analyse"
